--- a/Vivek Saliya/style.css
+++ b/Vivek Saliya/style.css
@@ -1,101 +1,48 @@
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+*{
+    margin: 0%;
+    padding: 0%;
+    background-color: #2d737a;
+    color: white;
 }
 
-.container {
-    height: 100vh;
-    width: 100%;
-    color: #262322;
-    background-color: #f2e5d7;
+#navbar{
+    height: 50px;
+    color: white;       
 }
 
-.top {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-bottom: 3rem;
-    padding-top: 1.5rem;
+a{
+    text-decoration: none;
+    margin-right: 50px;
+    color: white;
 }
-
-.top h1 {
-    margin: 0;
-    font-size: 3rem;
+#logo{
+    font-size: 160%;
 }
-
-.top p {
-    letter-spacing: 0.2rem;
-    padding-left: 1rem;
+#mainpage{
+    text-align: center;
+    padding-top: 70px;
+    font-size: xx-large;
+    color: white;
 }
-
-.main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+p{
+    font-size: large;
 }
-
-.main .quote-area {
-    height: 55vh;
-    width: 27rem;
-    background-color: #eff1f5;
-    border-radius: 0.7rem;
-    padding: 1.3rem 3rem;
-    overflow-y: auto;
-    box-sizing: border-box;
+img{
+    padding-top: 40px;
+    width: 800px;
 }
-
-/* .quote-area::-webkit-scrollbar {
-    display: none;
-} */
-
-.main .quote-area #quote {
-    font-size: 1.6rem;
-    font-weight: 600;
-    line-height: 2.3rem;
-    text-transform: uppercase;
+#aboutsection{
+    text-align: center;
 }
-
-.main .quote-area #author {
-    font-size: 1.1rem;
+#services{
+    text-decoration: underline;
 }
+#contactform{
+    text-align: center;
+    font-weight: bold;
+    font-size: x-large;
+    text-decoration: underline;
+    margin-left: 40px;
 
-.bottom {
-    display: flex;
-    justify-content: center;
-    padding-top: 1.5rem;
-}
-
-.bottom #btn {
-    width: 27rem;
-    height: 4rem;
-    color: #fff;
-    background-color: #262322;
-    border-radius: 0.7rem;
-    font-weight: 700;
-    font-size: 1.1rem;
-    border: 0;
-    cursor: pointer;
-}
-
-.end {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.end p {
-    font-weight: 600;
-    font-size: 0.8rem;
-    padding-top: 0.5rem;
-}
-
-@media screen and (max-width: 720px){
-    .main .quote-area {
-        width: 95vw;
-        height: 45vh;
-    }
 }
 
